// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constant-value-int.melody.twig 1`] = `
    123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
123

`;

exports[`constant-value-string.melody.twig 1`] = `
  Test string
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Test string

`;
